cctp_trader/cctp_trader.h

typedef void(__cdecl *FuncPtrTradeOnErrRtnOptionSelfCloseInsert)(CThostFtdcInputOptionSelfCloseField* pInputOptionSelfClose, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnOptionSelfCloseAction)(CThostFtdcOptionSelfCloseActionField* pOptionSelfCloseAction, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRtnCombAction)(CThostFtdcCombActionField* pCombAction) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnCombActionInsert)(CThostFtdcInputCombActionField* pInputCombAction, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryContractBank)(CThostFtdcContractBankField* pContractBank, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryParkedOrder)(CThostFtdcParkedOrderField* pParkedOrder, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryParkedOrderAction)(CThostFtdcParkedOrderActionField* pParkedOrderAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryTradingNotice)(CThostFtdcTradingNoticeField* pTradingNotice, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryBrokerTradingParams)(CThostFtdcBrokerTradingParamsField* pBrokerTradingParams, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryBrokerTradingAlgos)(CThostFtdcBrokerTradingAlgosField* pBrokerTradingAlgos, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQueryCFMMCTradingAccountToken)(CThostFtdcQueryCFMMCTradingAccountTokenField* pQueryCFMMCTradingAccountToken, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRtnFromBankToFutureByBank)(CThostFtdcRspTransferField* pRspTransfer) ;
typedef void(__cdecl *FuncPtrTradeOnRtnFromFutureToBankByBank)(CThostFtdcRspTransferField* pRspTransfer) ;
typedef void(__cdecl *FuncPtrTradeOnRtnRepealFromBankToFutureByBank)(CThostFtdcRspRepealField* pRspRepeal) ;
typedef void(__cdecl *FuncPtrTradeOnRtnRepealFromFutureToBankByBank)(CThostFtdcRspRepealField* pRspRepeal) ;
typedef void(__cdecl *FuncPtrTradeOnRtnFromBankToFutureByFuture)(CThostFtdcRspTransferField* pRspTransfer) ;
typedef void(__cdecl *FuncPtrTradeOnRtnFromFutureToBankByFuture)(CThostFtdcRspTransferField* pRspTransfer) ;
typedef void(__cdecl *FuncPtrTradeOnRtnRepealFromBankToFutureByFutureManual)(CThostFtdcRspRepealField* pRspRepeal) ;
typedef void(__cdecl *FuncPtrTradeOnRtnRepealFromFutureToBankByFutureManual)(CThostFtdcRspRepealField* pRspRepeal) ;
typedef void(__cdecl *FuncPtrTradeOnRtnQueryBankBalanceByFuture)(CThostFtdcNotifyQueryAccountField* pNotifyQueryAccount) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnBankToFutureByFuture)(CThostFtdcReqTransferField* pReqTransfer, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnFutureToBankByFuture)(CThostFtdcReqTransferField* pReqTransfer, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnRepealBankToFutureByFutureManual)(CThostFtdcReqRepealField* pReqRepeal, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnRepealFutureToBankByFutureManual)(CThostFtdcReqRepealField* pReqRepeal, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnQueryBankBalanceByFuture)(CThostFtdcReqQueryAccountField* pReqQueryAccount, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRtnRepealFromBankToFutureByFuture)(CThostFtdcRspRepealField* pRspRepeal) ;
typedef void(__cdecl *FuncPtrTradeOnRtnRepealFromFutureToBankByFuture)(CThostFtdcRspRepealField* pRspRepeal) ;
typedef void(__cdecl *FuncPtrTradeOnRspFromBankToFutureByFuture)(CThostFtdcReqTransferField* pReqTransfer, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspFromFutureToBankByFuture)(CThostFtdcReqTransferField* pReqTransfer, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQueryBankAccountMoneyByFuture)(CThostFtdcReqQueryAccountField* pReqQueryAccount, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRtnOpenAccountByBank)(CThostFtdcOpenAccountField* pOpenAccount) ;
    API_EXPORT void RegisterTradeFPOnErrRtnOptionSelfCloseInsert(void* trader, FuncPtrTradeOnErrRtnOptionSelfCloseInsert fp);
    API_EXPORT void RegisterTradeFPOnErrRtnOptionSelfCloseAction(void* trader, FuncPtrTradeOnErrRtnOptionSelfCloseAction fp);
    API_EXPORT void RegisterTradeFPOnRtnCombAction(void* trader, FuncPtrTradeOnRtnCombAction fp);
    API_EXPORT void RegisterTradeFPOnErrRtnCombActionInsert(void* trader, FuncPtrTradeOnErrRtnCombActionInsert fp);
    API_EXPORT void RegisterTradeFPOnRspQryContractBank(void* trader, FuncPtrTradeOnRspQryContractBank fp);
    API_EXPORT void RegisterTradeFPOnRspQryParkedOrder(void* trader, FuncPtrTradeOnRspQryParkedOrder fp);
    API_EXPORT void RegisterTradeFPOnRspQryParkedOrderAction(void* trader, FuncPtrTradeOnRspQryParkedOrderAction fp);
    API_EXPORT void RegisterTradeFPOnRspQryTradingNotice(void* trader, FuncPtrTradeOnRspQryTradingNotice fp);
    API_EXPORT void RegisterTradeFPOnRspQryBrokerTradingParams(void* trader, FuncPtrTradeOnRspQryBrokerTradingParams fp);
    API_EXPORT void RegisterTradeFPOnRspQryBrokerTradingAlgos(void* trader, FuncPtrTradeOnRspQryBrokerTradingAlgos fp);
    API_EXPORT void RegisterTradeFPOnRspQueryCFMMCTradingAccountToken(void* trader, FuncPtrTradeOnRspQueryCFMMCTradingAccountToken fp);
    API_EXPORT void RegisterTradeFPOnRtnFromBankToFutureByBank(void* trader, FuncPtrTradeOnRtnFromBankToFutureByBank fp);
    API_EXPORT void RegisterTradeFPOnRtnFromFutureToBankByBank(void* trader, FuncPtrTradeOnRtnFromFutureToBankByBank fp);
    API_EXPORT void RegisterTradeFPOnRtnRepealFromBankToFutureByBank(void* trader, FuncPtrTradeOnRtnRepealFromBankToFutureByBank fp);
    API_EXPORT void RegisterTradeFPOnRtnRepealFromFutureToBankByBank(void* trader, FuncPtrTradeOnRtnRepealFromFutureToBankByBank fp);
    API_EXPORT void RegisterTradeFPOnRtnFromBankToFutureByFuture(void* trader, FuncPtrTradeOnRtnFromBankToFutureByFuture fp);
    API_EXPORT void RegisterTradeFPOnRtnFromFutureToBankByFuture(void* trader, FuncPtrTradeOnRtnFromFutureToBankByFuture fp);
    API_EXPORT void RegisterTradeFPOnRtnRepealFromBankToFutureByFutureManual(void* trader, FuncPtrTradeOnRtnRepealFromBankToFutureByFutureManual fp);
    API_EXPORT void RegisterTradeFPOnRtnRepealFromFutureToBankByFutureManual(void* trader, FuncPtrTradeOnRtnRepealFromFutureToBankByFutureManual fp);
    API_EXPORT void RegisterTradeFPOnRtnQueryBankBalanceByFuture(void* trader, FuncPtrTradeOnRtnQueryBankBalanceByFuture fp);
    API_EXPORT void RegisterTradeFPOnErrRtnBankToFutureByFuture(void* trader, FuncPtrTradeOnErrRtnBankToFutureByFuture fp);
    API_EXPORT void RegisterTradeFPOnErrRtnFutureToBankByFuture(void* trader, FuncPtrTradeOnErrRtnFutureToBankByFuture fp);
    API_EXPORT void RegisterTradeFPOnErrRtnRepealBankToFutureByFutureManual(void* trader, FuncPtrTradeOnErrRtnRepealBankToFutureByFutureManual fp);
    API_EXPORT void RegisterTradeFPOnErrRtnRepealFutureToBankByFutureManual(void* trader, FuncPtrTradeOnErrRtnRepealFutureToBankByFutureManual fp);
    API_EXPORT void RegisterTradeFPOnErrRtnQueryBankBalanceByFuture(void* trader, FuncPtrTradeOnErrRtnQueryBankBalanceByFuture fp);
    API_EXPORT void RegisterTradeFPOnRtnRepealFromBankToFutureByFuture(void* trader, FuncPtrTradeOnRtnRepealFromBankToFutureByFuture fp);
    API_EXPORT void RegisterTradeFPOnRtnRepealFromFutureToBankByFuture(void* trader, FuncPtrTradeOnRtnRepealFromFutureToBankByFuture fp);
    API_EXPORT void RegisterTradeFPOnRspFromBankToFutureByFuture(void* trader, FuncPtrTradeOnRspFromBankToFutureByFuture fp);
    API_EXPORT void RegisterTradeFPOnRspFromFutureToBankByFuture(void* trader, FuncPtrTradeOnRspFromFutureToBankByFuture fp);
    API_EXPORT void RegisterTradeFPOnRspQueryBankAccountMoneyByFuture(void* trader, FuncPtrTradeOnRspQueryBankAccountMoneyByFuture fp);
    API_EXPORT void RegisterTradeFPOnRtnOpenAccountByBank(void* trader, FuncPtrTradeOnRtnOpenAccountByBank fp);