CSharpCtp/TraderDllWrapper.cs

        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnOptionSelfCloseInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnOptionSelfCloseInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnOptionSelfCloseInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnOptionSelfCloseAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnOptionSelfCloseActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnOptionSelfCloseActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnCombAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnCombActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnCombActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnCombActionInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnCombActionInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnCombActionInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryContractBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryContractBankCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryContractBankDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryParkedOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryParkedOrderCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryParkedOrderDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryParkedOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryParkedOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryParkedOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryTradingNotice",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryTradingNoticeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryTradingNoticeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryBrokerTradingParams",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryBrokerTradingParamsCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryBrokerTradingParamsDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryBrokerTradingAlgos",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryBrokerTradingAlgosCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryBrokerTradingAlgosDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQueryCFMMCTradingAccountToken",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQueryCFMMCTradingAccountTokenCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQueryCFMMCTradingAccountTokenDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnFromBankToFutureByBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnFromBankToFutureByBankCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnFromBankToFutureByBankDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnFromFutureToBankByBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnFromFutureToBankByBankCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnFromFutureToBankByBankDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnRepealFromBankToFutureByBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnRepealFromBankToFutureByBankCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnRepealFromBankToFutureByBankDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnRepealFromFutureToBankByBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnRepealFromFutureToBankByBankCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnRepealFromFutureToBankByBankDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnFromBankToFutureByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnFromBankToFutureByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnFromBankToFutureByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnFromFutureToBankByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnFromFutureToBankByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnFromFutureToBankByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnRepealFromBankToFutureByFutureManual",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnRepealFromBankToFutureByFutureManualCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnRepealFromBankToFutureByFutureManualDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnRepealFromFutureToBankByFutureManual",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnRepealFromFutureToBankByFutureManualCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnRepealFromFutureToBankByFutureManualDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnQueryBankBalanceByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnQueryBankBalanceByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnQueryBankBalanceByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnBankToFutureByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnBankToFutureByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnBankToFutureByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnFutureToBankByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnFutureToBankByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnFutureToBankByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnRepealBankToFutureByFutureManual",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnRepealBankToFutureByFutureManualCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnRepealBankToFutureByFutureManualDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnRepealFutureToBankByFutureManual",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnRepealFutureToBankByFutureManualCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnRepealFutureToBankByFutureManualDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnQueryBankBalanceByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnQueryBankBalanceByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnQueryBankBalanceByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnRepealFromBankToFutureByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnRepealFromBankToFutureByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnRepealFromBankToFutureByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnRepealFromFutureToBankByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnRepealFromFutureToBankByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnRepealFromFutureToBankByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspFromBankToFutureByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspFromBankToFutureByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspFromBankToFutureByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspFromFutureToBankByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspFromFutureToBankByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspFromFutureToBankByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQueryBankAccountMoneyByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQueryBankAccountMoneyByFutureCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQueryBankAccountMoneyByFutureDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnOpenAccountByBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnOpenAccountByBankCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnOpenAccountByBankDelegate callback);
